crates/ridl-syntax/tests/snapshots/parser_err_corpus__ridl_err_corpus_is_lossless_reports_errors_and_matches_snapshots@unclosed_interface_brace.ridl.snap
---
source: crates/ridl-syntax/tests/parser_err_corpus.rs
expression: dump(&parsed)
input_file: crates/ridl-syntax/test_data/parser/err/unclosed_interface_brace.ridl
---
SourceFile@0..94
  PackageDecl@0..15
    PackageKw@0..7 "package"
    Whitespace@7..8 " "
    QualifiedName@8..15
      Ident@8..11 "veh"
      Dot@11..12 "."
      Ident@12..15 "err"
  Whitespace@15..17 "\n\n"
  InterfaceDef@17..66
    InterfaceKw@17..26 "interface"
    Whitespace@26..27 " "
    Name@27..33
      Ident@27..33 "Broken"
    Whitespace@33..34 " "
    LBrace@34..35 "{"
    Whitespace@35..38 "\n  "
    SignalDef@38..64
      SignalKw@38..44 "signal"
      Whitespace@44..45 " "
      Name@45..50
        Ident@45..50 "speed"
      Whitespace@50..51 " "
      Colon@51..52 ":"
      Whitespace@52..53 " "
      PathType@53..58
        QualifiedName@53..58
          Ident@53..58 "Speed"
      Whitespace@58..59 " "
      Timing@59..64
        At@59..60 "@"
        Duration@60..64 "10ms"
    Whitespace@64..66 "\n\n"
  TypeDef@66..93
    TypeKw@66..70 "type"
    Whitespace@70..71 " "
    Name@71..76
      Ident@71..76 "After"
    Whitespace@76..77 " "
    Colon@77..78 ":"
    Whitespace@78..79 " "
    PrimitiveType@79..86
      IntegerKw@79..86 "integer"
    Whitespace@86..87 " "
    Constraint@87..93
      LBracket@87..88 "["
      Literal@88..89
        IntNumber@88..89 "0"
      DotDot@89..91 ".."
      Literal@91..92
        IntNumber@91..92 "1"
      RBracket@92..93 "]"
  Whitespace@93..94 "\n"
errors:
  FORM-103 66..70 unclosed `{`
