crates/ridl-syntax/tests/snapshots/parser_err_corpus__rsdl_err_corpus_is_lossless_reports_errors_and_matches_snapshots@rsdl_foreign_declarations.rsdl.snap
---
source: crates/ridl-syntax/tests/parser_err_corpus.rs
expression: dump(&parsed)
input_file: crates/ridl-syntax/test_data/parser/err/rsdl_foreign_declarations.rsdl
---
SourceFile@0..474
  PackageDecl@0..20
    PackageKw@0..7 "package"
    Whitespace@7..8 " "
    QualifiedName@8..20
      Ident@8..11 "veh"
      Dot@11..12 "."
      Ident@12..20 "topology"
  Whitespace@20..22 "\n\n"
  LineComment@22..101 "// rsdl reference §2 ..."
  Whitespace@101..102 "\n"
  LineComment@102..179 "// file is RSDL-604.  ..."
  Whitespace@179..180 "\n"
  LineComment@180..207 "// after them still p ..."
  Whitespace@207..208 "\n"
  ErrorNode@208..246
    TypeKw@208..212 "type"
    Whitespace@212..213 " "
    Ident@213..218 "Speed"
    Colon@218..219 ":"
    Whitespace@219..220 " "
    Ident@220..222 "km"
    Slash@222..223 "/"
    Ident@223..224 "h"
    Whitespace@224..225 " "
    LBracket@225..226 "["
    FloatNumber@226..229 "0.0"
    DotDot@229..231 ".."
    FloatNumber@231..236 "250.0"
    Whitespace@236..237 " "
    StepKw@237..241 "step"
    Whitespace@241..242 " "
    FloatNumber@242..245 "0.5"
    RBracket@245..246 "]"
  Whitespace@246..247 "\n"
  ErrorNode@247..296
    InternalKw@247..255 "internal"
    Whitespace@255..256 " "
    StructKw@256..262 "struct"
    Whitespace@262..263 " "
    Ident@263..268 "Fault"
    Whitespace@268..269 " "
    LBrace@269..270 "{"
    Whitespace@270..271 " "
    Ident@271..276 "count"
    Colon@276..277 ":"
    Whitespace@277..278 " "
    IntegerKw@278..285 "integer"
    Whitespace@285..286 " "
    LBracket@286..287 "["
    IntNumber@287..288 "0"
    DotDot@288..290 ".."
    IntNumber@290..293 "255"
    RBracket@293..294 "]"
    Whitespace@294..295 " "
    RBrace@295..296 "}"
  Whitespace@296..297 "\n"
  ErrorNode@297..359
    ReservedWord@297..306 "interface"
    Whitespace@306..307 " "
    Ident@307..317 "LaneAssist"
    Whitespace@317..318 " "
    LBrace@318..319 "{"
    Whitespace@319..322 "\n  "
    ReservedWord@322..328 "signal"
    Whitespace@328..329 " "
    Ident@329..335 "active"
    Colon@335..336 ":"
    Whitespace@336..337 " "
    BooleanKw@337..344 "boolean"
    Whitespace@344..345 " "
    At@345..346 "@"
    LBracket@346..347 "["
    Duration@347..352 "100ms"
    DotDot@352..354 ".."
    Duration@354..356 "1s"
    RBracket@356..357 "]"
    Whitespace@357..358 "\n"
    RBrace@358..359 "}"
  Whitespace@359..360 "\n"
  ErrorNode@360..432
    ReservedWord@360..367 "service"
    Whitespace@367..368 " "
    Ident@368..371 "veh"
    Dot@371..372 "."
    Ident@372..376 "diag"
    Dot@376..377 "."
    Ident@377..383 "access"
    Whitespace@383..384 " "
    LBrace@384..385 "{"
    Whitespace@385..388 "\n  "
    ReservedWord@388..393 "query"
    Whitespace@393..394 " "
    Ident@394..404 "readFaults"
    LParen@404..405 "("
    RParen@405..406 ")"
    Colon@406..407 ":"
    Whitespace@407..408 " "
    Ident@408..419 "FaultReport"
    Whitespace@419..420 " "
    At@420..421 "@"
    LBracket@421..422 "["
    DotDot@422..424 ".."
    Duration@424..429 "100ms"
    RBracket@429..430 "]"
    Whitespace@430..431 "\n"
    RBrace@431..432 "}"
  Whitespace@432..434 "\n\n"
  ComponentDef@434..473
    ComponentKw@434..443 "component"
    Whitespace@443..444 " "
    Name@444..448
      Ident@444..448 "Lane"
    Whitespace@448..449 " "
    LBrace@449..450 "{"
    Whitespace@450..451 " "
    ComponentLine@451..471
      OffersKw@451..457 "offers"
      Whitespace@457..458 " "
      Reference@458..471
        QualifiedName@458..471
          Ident@458..461 "veh"
          Dot@461..462 "."
          Ident@462..466 "adas"
          Dot@466..467 "."
          Ident@467..471 "lane"
    Whitespace@471..472 " "
    RBrace@472..473 "}"
  Whitespace@473..474 "\n"
errors:
  RSDL-604 208..212 `type` starts a declaration of another profile, and an `.rsdl` file declares `system`, `component`, `distribution` and `deployment` only — a type is declared in a `.typl` file, an interface or a service in a `.ridl` file (rsdl reference §2)
  RSDL-604 247..255 `struct` starts a declaration of another profile, and an `.rsdl` file declares `system`, `component`, `distribution` and `deployment` only — a type is declared in a `.typl` file, an interface or a service in a `.ridl` file (rsdl reference §2)
  RSDL-604 297..306 `interface` starts a declaration of another profile, and an `.rsdl` file declares `system`, `component`, `distribution` and `deployment` only — a type is declared in a `.typl` file, an interface or a service in a `.ridl` file (rsdl reference §2)
  RSDL-604 360..367 `service` starts a declaration of another profile, and an `.rsdl` file declares `system`, `component`, `distribution` and `deployment` only — a type is declared in a `.typl` file, an interface or a service in a `.ridl` file (rsdl reference §2)
