crates/ridl-syntax/tests/snapshots/parser_err_corpus__rsdl_err_corpus_is_lossless_reports_errors_and_matches_snapshots@rsdl_one_reference_per_line.rsdl.snap
---
source: crates/ridl-syntax/tests/parser_err_corpus.rs
expression: dump(&parsed)
input_file: crates/ridl-syntax/test_data/parser/err/rsdl_one_reference_per_line.rsdl
---
SourceFile@0..184
  PackageDecl@0..20
    PackageKw@0..7 "package"
    Whitespace@7..8 " "
    QualifiedName@8..20
      Ident@8..11 "veh"
      Dot@11..12 "."
      Ident@12..20 "topology"
  Whitespace@20..22 "\n\n"
  LineComment@22..87 "// rsdl reference §3 ..."
  Whitespace@87..88 "\n"
  ComponentDef@88..142
    ComponentKw@88..97 "component"
    Whitespace@97..98 " "
    Name@98..103
      Ident@98..103 "Panel"
    Whitespace@103..104 " "
    LBrace@104..105 "{"
    Whitespace@105..106 " "
    ComponentLine@106..128
      RequiresKw@106..114 "requires"
      Whitespace@114..115 " "
      Reference@115..128
        QualifiedName@115..128
          Ident@115..128 "CruiseControl"
    Comma@128..129 ","
    Whitespace@129..130 " "
    ErrorNode@130..140
      Ident@130..140 "LaneAssist"
    Whitespace@140..141 " "
    RBrace@141..142 "}"
  Whitespace@142..144 "\n\n"
  ComponentDef@144..183
    ComponentKw@144..153 "component"
    Whitespace@153..154 " "
    Name@154..158
      Ident@154..158 "Lane"
    Whitespace@158..159 " "
    LBrace@159..160 "{"
    Whitespace@160..161 " "
    ComponentLine@161..181
      OffersKw@161..167 "offers"
      Whitespace@167..168 " "
      Reference@168..181
        QualifiedName@168..181
          Ident@168..171 "veh"
          Dot@171..172 "."
          Ident@172..176 "adas"
          Dot@176..177 "."
          Ident@177..181 "lane"
    Whitespace@181..182 " "
    RBrace@182..183 "}"
  Whitespace@183..184 "\n"
errors:
  FORM-102 130..140 `LaneAssist` is a second reference — a component line takes one reference, so write its own `offers` or `requires` before it (rsdl reference §3.2)
